adicinado aula 9 na branch main

--- a/index.html
+++ b/index.html
@@ -5,35 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front-End I</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Atividades Front-End I</h1>
     <div>
-    <a href="./Aula 4/Index.html">
-      <img src="./img/Html-120.png" alt="Imagem">
-      Aula 04
-    </a>
+      <a href="./Aula 4/Index.html">
+        <img src="./img/Html-120.png" alt="Imagem" />
+        Aula 04
+      </a>
 
-    <a href="./Aula 5/index.html">
-      <img src="./img/Html-120.png" alt="Imagem">
-      Aula 05
-    </a>
+      <a href="./Aula 5/index.html">
+        <img src="./img/Html-120.png" alt="Imagem" />
+        Aula 05
+      </a>
 
-    <a href="./Aula 6/index.html">
-        <img src="./img/Html-120.png" alt="Imagem">
+      <a href="./Aula 6/index.html">
+        <img src="./img/Html-120.png" alt="Imagem" />
         Aula 06
-    </a>
+      </a>
 
-    <a href="./Aula 7/index.html"> 
-        <img src="./img/Html-120.png" alt="Imagem">
+      <a href="./Aula 7/index.html">
+        <img src="./img/Html-120.png" alt="Imagem" />
         Aula 07
-    </a>
-    
-    <a href="./Aula 8/index.html">
-        <img src="./img/Html-120.png" alt="Imagem">
+      </a>
+
+      <a href="./Aula 8/index.html">
+        <img src="./img/Html-120.png" alt="Imagem" />
         Aula 08
-    </a>
-</div>
+      </a>
+
+      <a href="/Aula 9/index.html">
+        <img src="./img/Html-120.png" alt="Imagem" />
+        Aula 9
+      </a>
+    </div>
   </body>
 </html>
