--- a/Aula 9/index.html
+++ b/Aula 9/index.html
@@ -8,7 +8,7 @@
       rel="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
       href="css/style.css"
     />
-    <link rel="stylesheet" href="/Aula 9/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Aula 9</title>
   </head>
   <body>
