--- a/Aula 9/index.html
+++ b/Aula 9/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
-      href="css/style.css"
-    />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/Aula 9/css/style.css" />
+    <link rel="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" href="css/style.css"/>
     <title>Aula 9</title>
   </head>
   <body>
