--- a/Aula 9/index.html
+++ b/Aula 9/index.html
@@ -1,118 +1,119 @@
 <!DOCTYPE html>
-<html lang="pt">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
-        <title>Aula 9</title>
-    </head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css"/>
+    
+    <title>Aula 9</title>
+  </head>
+  <body>
+    <h1 class="page-title">Vídeos em alta</h1>
+    <p class="page-description">Veja os vídeos mais acessados da semana</p>
 
-    <body>
+    <section class="videos">
+      <div class="video">
+        <img class="thumbnail" src="https://picsum.photos/800/500?random=1" />
 
-        <h1 class="page-title">Vídeos em alta</h1>
-        <p class="page-description">Veja os vídeos mais acessados da semana</p>
+        <span class="video-time">10:00</span>
 
-        <section class="videos">
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
-            <div class="video">
+        <p class="video-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+          explicabo!
+        </p>
 
-                <img class="thumbnail" src="https://picsum.photos/800/500?random=1">
+        <span class="video-views">100k visualizações</span>
 
-                <span class="video-time">10:00</span>
+        <time class="video-date">Há 1 mês</time>
+      </div>
 
-                <h1 class="video-title">Lorem ipsum dolor</h1>
+      <div class="video">
+        <img class="thumbnail" src="https://picsum.photos/800/500?random=2" />
 
-                <p class="video-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, explicabo!</p>
+        <span class="video-time">10:00</span>
 
-                <span class="video-views">100k visualizações</span>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
-                <time class="video-date">Há 1 mês</time>
+        <p class="video-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+          explicabo!
+        </p>
 
-            </div>
+        <span class="video-views">100k visualizações</span>
 
-            <div class="video">
+        <time class="video-date">Há 1 mês</time>
+      </div>
 
-                <img class="thumbnail" src="https://picsum.photos/800/500?random=2">
+      <div class="video">
+        <img class="thumbnail" src="https://picsum.photos/800/500?random=3" />
 
-                <span class="video-time">10:00</span>
+        <span class="video-time">10:00</span>
 
-                <h1 class="video-title">Lorem ipsum dolor</h1>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
-                <p class="video-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, explicabo!</p>
+        <p class="video-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+          explicabo!
+        </p>
 
-                <span class="video-views">100k visualizações</span>
+        <span class="video-views">100k visualizações</span>
 
-                <time class="video-date">Há 1 mês</time>
+        <time class="video-date">Há 1 mês</time>
+      </div>
 
-            </div>
+      <div class="video">
+        <img class="thumbnail" src="https://picsum.photos/800/500?random=4" />
 
-            <div class="video">
+        <span class="video-time">10:00</span>
 
-                <img class="thumbnail" src="https://picsum.photos/800/500?random=3">
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
-                <span class="video-time">10:00</span>
+        <p class="video-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+          explicabo!
+        </p>
 
-                <h1 class="video-title">Lorem ipsum dolor</h1>
+        <span class="video-views">100k visualizações</span>
 
-                <p class="video-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, explicabo!</p>
+        <time class="video-date">Há 2 mês</time>
+      </div>
 
-                <span class="video-views">100k visualizações</span>
+      <div class="video">
+        <img class="thumbnail" src="https://picsum.photos/800/500?random=5" />
 
-                <time class="video-date">Há 1 mês</time>
+        <span class="video-time">10:00</span>
 
-            </div>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
-            <div class="video">
+        <p class="video-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+          explicabo!
+        </p>
 
-                <img class="thumbnail" src="https://picsum.photos/800/500?random=4">
+        <span class="video-views">100k visualizações</span>
 
-                <span class="video-time">10:00</span>
+        <time class="video-date">Há 3 mês</time>
+      </div>
 
-                <h1 class="video-title">Lorem ipsum dolor</h1>
+      <div class="video">
+        <img class="thumbnail" src="https://picsum.photos/800/500?random=6" />
 
-                <p class="video-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, explicabo!</p>
+        <span class="video-time">10:00</span>
 
-                <span class="video-views">100k visualizações</span>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
-                <time class="video-date">Há 1 mês</time>
+        <p class="video-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+          explicabo!
+        </p>
 
-            </div>
+        <span class="video-views">100k visualizações</span>
 
-            <div class="video">
-
-                <img class="thumbnail" src="https://picsum.photos/800/500?random=5">
-
-                <span class="video-time">10:00</span>
-
-                <h1 class="video-title">Lorem ipsum dolor</h1>
-
-                <p class="video-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, explicabo!</p>
-
-                <span class="video-views">100k visualizações</span>
-
-                <time class="video-date">Há 1 mês</time>
-
-            </div>
-
-            <div class="video">
-
-                <img class="thumbnail" src="https://picsum.photos/800/500?random=6">
-
-                <span class="video-time">10:00</span>
-
-                <h1 class="video-title">Lorem ipsum dolor</h1>
-
-                <p class="video-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, explicabo!</p>
-
-                <span class="video-views">100k visualizações</span>
-
-                <time class="video-date">Há 1 mês</time>
-
-            </div>
-
-        </section>
-
-    </body>
-
+        <time class="video-date">Há 4 mês</time>
+      </div>
+    </section>
+  </body>
 </html>
