modificações no css

--- a/index.html
+++ b/index.html
@@ -6,38 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front-End I</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/fd1b7e0aff.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <h1>Atividades Front-End I</h1>
-    <div>
+    <div class="Icons">
       <a href="./Aula 4/Index.html">
-        <img src="./img/Html-120.png" alt="Imagem" />
-        Aula 04
+        <i class="fa-brands fa-html5">Aula4</i>
       </a>
 
       <a href="./Aula 5/index.html">
-        <img src="./img/Html-120.png" alt="Imagem" />
-        Aula 05
+        <i class="fa-brands fa-html5">Aula5</i>
       </a>
 
       <a href="./Aula 6/index.html">
-        <img src="./img/Html-120.png" alt="Imagem" />
-        Aula 06
+        <i class="fa-brands fa-html5">Aula 6</i>
       </a>
 
       <a href="./Aula 7/index.html">
-        <img src="./img/Html-120.png" alt="Imagem" />
-        Aula 07
+        <i class="fa-brands fa-html5">Aula 7</i>
       </a>
 
       <a href="./Aula 8/index.html">
-        <img src="./img/Html-120.png" alt="Imagem" />
-        Aula 08
+        <i class="fa-brands fa-html5">Aula 8</i>
       </a>
 
       <a href="./Aula 9/index.html">
-        <img src="./img/Html-120.png" alt="Imagem" />
-        Aula 9
+        <i class="fa-brands fa-html5">Aula 9</i>
       </a>
     </div>
   </body>
