--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <i class="fa-brands fa-html5">Aula 9</i>
       </a>
    
-        <a href="./Aula 10/index.html"></a>
+        <a href="./Aula 10/index.html">
       <i class="fa-brands fa-html5">Aula 10</i>
       </a>
     </div>
