add caminho no index principal

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       <a href="./Aula 9/index.html">
         <i class="fa-brands fa-html5">Aula 9</i>
       </a>
+
+      <a href="./Aula 10/index.html">
+        <i class="fa-brands fa-html5">Aula 10</i>
+      </a>
+     
     </div>
   </body>
 </html>
