--- a/Aula 11/index.html
+++ b/Aula 11/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aula 11</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="./img/Logo.png" class="logo" alt="Logo">
+      </div>
+      <div class="Navbar">
+         <div class="item1">Home</div> 
+         <div class="item2">Ranking</div> 
+         <div class="item3">Promoção</div>
+         <div class="item4">Contato</div>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div class="imagem1">
+           <h2 class="fist"> Envio grátis <span class="second">comprando</span> 2 pizzas</h2>
+          <img src="./img/delivery.jpg" class="motodelivery" alt="">
+        </div>
+        <div class="imagem2">
+          <h2 class="menu">Cardápio de Pizzas</h2> 
+          <h3>TOP 5</h3>
+          <ol class="lista">
+            <li>Franco e Catupiry</li>
+            <li>Hawaiana</li>
+            <li>Bolonhesa</li>
+            <li>Fugazzeta</li>
+            <li>Calabresa</li>  
+          </ol>
+          <img src="./img/Rectangle 2.png" class="Fundobranco" alt="">
+          <img src="./img/PizzaFalling.svg" class="pizzas" alt="">
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <img src="./img/Logo.svg" class="logo2" alt="Logo">
+      </div>
+      <div class="Rodapé">
+        <div class="item5">Home</div> 
+         <div class="item6">Ranking</div> 
+         <div class="item7">Promoção</div>
+         <div class="item8">Contato</div>
+      </div>
+    </footer>
+  </body>
 </html>
