--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         <i class="fa-brands fa-html5">Aula 10</i>
       </a>
      
+      <a href="./Aula 11/index.html">
+        <i class="fa-brands fa-html5">Aula 11</i>
+      </a>
+
     </div>
   </body>
 </html>
