--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <i class="fa-brands fa-html5">Aula 11</i>
       </a>
 
+      <a href="./Aula 12/index.html">
+        <i class="fa-brands fa-html5">Aula 12</i>
+      </a>
+
     </div>
   </body>
 </html>
