--- a/Aula 14/index.html
+++ b/Aula 14/index.html
@@ -14,7 +14,7 @@
   <body>
     <h4>Desconto de 20%</h4>
     <header>
-      <h1>Super-Herois</h1>
+      <h1>Card Super Herois</h1>
     </header>
     <main>
       <section class="Ambiente-Card">
@@ -83,6 +83,7 @@
     </main>
     <footer>
       <h3>Todos os direitos resevados a G.Hebreus Front-End I</h3>
+      <a href="https://github.com/GabrielHebreus"></a>
     </footer>
   </body>
 </html>
