--- a/Aula 14/index.html
+++ b/Aula 14/index.html
@@ -17,6 +17,7 @@
       <h1>Card Super Herois</h1>
     </header>
     <main>
+      <button>+</button>
       <section class="Ambiente-Card">
         <div class="Card">
           <img class="Fundo" src="./img/Batman 2.png" alt="" />
