teste de responsividade

--- a/Aula 15/index.html
+++ b/Aula 15/index.html
@@ -11,21 +11,21 @@
   <header>
     <h1><span>Front</span>Cat&Dog</h1>
     <div class="Logo">
-      <img class="cat-logo" src="/img/icon/Cat.svg" alt="Cat-log" />
-      <img class="dog-logo" src="/img/icon/Dog.svg" alt="Dog-log" />
-      <img class="logo-menu" src="/img/icon/menu.svg" alt="menu-logo">
+      <img class="cat-logo" src="./img/icon/Cat.svg" alt="Cat-log" />
+      <img class="dog-logo" src="./img/icon/Dog.svg" alt="Dog-log" />
+      <img class="logo-menu" src="./img/icon/menu.svg" alt="menu-logo">
     </div>
   </header>
   <body>
     <main>
       <section class="slide">
-          <div class="bg-img"><img src="/img/bg-img.svg" alt="bg-img"></div>
-          <img class="barra" src="/img/barra.svg" alt="barra">
+          <div class="bg-img"><img src="./img/bg-img.svg" alt="bg-img"></div>
+          <img class="barra" src="./img/barra.svg" alt="barra">
           <h2>É um prazer te ter aqui!</h2>
           <button>COMEDOUROS</button>
       </section>
       <section class="produtos">
-         <img class="patas" src="/img/pata.svg" alt="pata">
+         <img class="patas" src="./img/pata.svg" alt="pata">
          <h3>Produtos Destacados</h3>
          <ul class="lista">
            <li>Comedouros</li>
